--- a/samples/ar-model-viewer/build.gradle
+++ b/samples/ar-model-viewer/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     implementation 'com.google.mlkit:text-recognition:16.0.0'
 
     // Camera
+    implementation "androidx.camera:camera-core:1.1.0-beta01"
     implementation 'androidx.camera:camera-camera2:1.1.0'
     implementation 'androidx.camera:camera-lifecycle:1.1.0'
     implementation 'androidx.camera:camera-view:1.1.0'
