--- a/samples/ar-model-viewer/build.gradle
+++ b/samples/ar-model-viewer/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     // Sceneform
     implementation "com.gorisse.thomas.sceneform:sceneform:1.23.0"
     implementation 'com.google.ar:core:1.31.0'
+    implementation 'androidx.media3:media3-effect:1.4.0'
     debugApi project(":sceneform")
 
     // New dependencies
