--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -52,16 +52,16 @@
 <!--        </activity>-->
 
 
-<!--        Main Activity-->
+<!--&lt;!&ndash;        Main Activity&ndash;&gt;-->
 <!--        <activity-->
 <!--            android:name=".library.screens.MainActivity"-->
 <!--            android:configChanges="orientation|screenSize"-->
 <!--            android:exported="true"-->
 <!--            android:screenOrientation="locked">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
+<!--&lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
+<!--&lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
+<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
 <!--        </activity>-->
 
 
