--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:required="false" />
 
     <application
+        android:name=".library.App"
         android:icon="@drawable/splashscreen"
         android:label="Augment-ED"
         android:theme="@style/AppTheme">
@@ -42,30 +43,29 @@
             android:value="required" />
 
 
-<!--        &lt;!&ndash;Splash Activity&ndash;&gt;-->
-<!--        <activity-->
-<!--            android:name=".library.screens.SplashActivity"-->
-<!--            android:configChanges="orientation|screenSize"-->
-<!--            android:exported="true"-->
-<!--            android:screenOrientation="locked">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+<!--Splash Activity-->
+<activity
+    android:name=".library.screens.SplashActivity"
+    android:configChanges="orientation|screenSize"
+    android:exported="true"
+    android:screenOrientation="locked">
+    <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+</activity>
 
-
-<!--&lt;!&ndash;        Main Activity&ndash;&gt;-->
-<!--        <activity-->
-<!--            android:name=".library.screens.MainActivity"-->
-<!--            android:configChanges="orientation|screenSize"-->
-<!--            android:exported="true"-->
-<!--            android:screenOrientation="locked">-->
-<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
-<!--&lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
-<!--&lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
-<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
-<!--        </activity>-->
+<!--Main Activity-->
+<activity
+    android:name=".library.screens.MainActivity"
+    android:configChanges="orientation|screenSize"
+    android:exported="true"
+    android:screenOrientation="locked">
+    <!--<intent-filter>-->
+    <!--    <action android:name="android.intent.action.MAIN" />-->
+    <!--    <category android:name="android.intent.category.LAUNCHER" />-->
+    <!--</intent-filter>-->
+</activity>
 
 
         <!--Activity-->
@@ -81,25 +81,25 @@
         </activity>
 
         <!--component: SpeechRecognition-->
-<!--        <activity-->
-<!--            android:name=".library.components.SpeechRecognitionActivity"-->
-<!--            android:configChanges="orientation|screenSize"-->
-<!--&lt;!&ndash;            android:exported="true">&ndash;&gt;-->
-<!--&lt;!&ndash;            <intent-filter>&ndash;&gt;-->
-<!--&lt;!&ndash;                <action android:name="android.intent.action.MAIN" />&ndash;&gt;-->
-<!--&lt;!&ndash;                <category android:name="android.intent.category.LAUNCHER" />&ndash;&gt;-->
-<!--&lt;!&ndash;            </intent-filter>&ndash;&gt;-->
-<!--&lt;!&ndash;        </activity>&ndash;&gt;-->
+        <activity
+            android:name=".library.components.SpeechRecognitionActivity"
+            android:configChanges="orientation|screenSize">
+            <!--android:exported="true">-->
+            <!--<intent-filter>-->
+            <!--    <action android:name="android.intent.action.MAIN" />-->
+            <!--    <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
 
-<!--        &lt;!&ndash;component: SpeechRecognition (2)&ndash;&gt;-->
-<!--        <activity-->
-<!--            android:name=".library.components.CameraSpeechActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+        <!--component: SpeechRecognition (2)-->
+        <activity
+            android:name=".library.components.CameraSpeechActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <!--Library Activity-->
         <activity
