refactor(LibraryFragment): add back button and refresh button

--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -49,10 +49,10 @@
     android:configChanges="orientation|screenSize"
     android:exported="true"
     android:screenOrientation="locked">
-    <intent-filter>
+<!--    <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
+    </intent-filter>-->
 </activity>
 
 <!--Main Activity-->
@@ -61,10 +61,7 @@
     android:configChanges="orientation|screenSize"
     android:exported="true"
     android:screenOrientation="locked">
-    <!--<intent-filter>-->
-    <!--    <action android:name="android.intent.action.MAIN" />-->
-    <!--    <category android:name="android.intent.category.LAUNCHER" />-->
-    <!--</intent-filter>-->
+
 </activity>
 
 
@@ -74,10 +71,10 @@
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:screenOrientation="locked">
-            <intent-filter>
+ <!--           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
 
         <!--component: SpeechRecognition-->
@@ -95,10 +92,7 @@
         <activity
             android:name=".library.components.CameraSpeechActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
 
         <!--Library Activity-->
@@ -106,6 +100,10 @@
             android:name=".library.screens.LibraryActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <!--Practice Activity-->
