--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         compileSdk = 34
-        minSdk = 24
+        minSdk = 30 //increased from 24 for Unity
         targetSdk = 34
 
         kotlin_version = '1.9.20'
@@ -22,6 +22,7 @@ buildscript {
         material_version = '1.6.0'
     }
     repositories {
+
         google()
         mavenLocal()
         mavenCentral()
@@ -38,6 +39,7 @@ buildscript {
 
 allprojects {
     repositories {
+
         google()
         mavenLocal()
         mavenCentral()
@@ -51,6 +53,7 @@ allprojects {
         }
     }
 }
+
 
 task printProjectProperties {
     project.properties.each { println "   $it" }
