--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.google.ar.sceneform.samples.gltf">
 
     <!-- Always needed for AR. -->
@@ -144,6 +145,15 @@
             android:exported="false"
             android:label="Bacteria Activity">
         </activity>
+
+        <!--Modules-->
+        <activity
+            android:name="com.unity3d.player.UnityPlayerGameActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            tools:replace="android:configChanges, android:theme" />
+
+
 
 
     </application>
