style(recitation-mode): add sounds and fix ui buttons

--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -54,10 +54,10 @@
     android:configChanges="orientation|screenSize"
     android:exported="true"
     android:screenOrientation="locked">
-    <intent-filter>
+<!--    <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
+    </intent-filter>-->
 </activity>
 
 <!--Main Activity-->
@@ -76,6 +76,12 @@
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:screenOrientation="locked">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
 
         <!--component: SpeechRecognition-->
