--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -84,6 +84,11 @@
 
         </activity>
 
+        <!--Ucrop Activity-->
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
         <!--component: SpeechRecognition-->
         <activity
             android:name=".library.components.SpeechRecognitionActivity"
