--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ allprojects {
         google()
         mavenLocal()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
