camera(camera): fix camera photo resolution scale inconsistencies

--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -86,7 +86,7 @@
 
         <!--Ucrop Activity-->
         <activity
-            android:name="com.google.ar.sceneform.samples.gltf.library.screens.CustomUCropActivity"
+            android:name="com.google.ar.sceneform.samples.gltf.library.components.CustomUCropActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
 
