--- a/samples/ar-model-viewer/build.gradle
+++ b/samples/ar-model-viewer/build.gradle
@@ -106,6 +106,7 @@ dependencies {
 
     // Speech recognition
     implementation 'com.alphacephei:vosk-android:0.3.32'
+    implementation 'com.airbnb.android:lottie:5.0.3'
 
     // Camera
     implementation "androidx.camera:camera-core:1.1.0-beta01"
