--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -54,10 +54,21 @@
     android:configChanges="orientation|screenSize"
     android:exported="true"
     android:screenOrientation="locked">
-<!--    <intent-filter>
+    <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>-->
+    </intent-filter>
+</activity>
+
+<!--Initialization Activity-->
+
+
+<activity
+    android:name=".library.screens.InitializationActivity"
+    android:configChanges="orientation|screenSize"
+    android:exported="true"
+    android:screenOrientation="locked">
+
 </activity>
 
 <!--Main Activity-->
@@ -77,10 +88,6 @@
             android:exported="true"
             android:screenOrientation="locked">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
 
