--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:required="false" />
 
     <application
+        android:largeHeap="true"
         android:debuggable="true"
         android:name=".library.App"
         android:icon="@drawable/splashscreen"
