--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -74,6 +74,14 @@
 
 <!--Main Activity-->
 <activity
+    android:name=".library.screens.MagnifyingActivity"
+    android:configChanges="orientation|screenSize"
+    android:exported="true"
+    android:screenOrientation="locked">
+
+</activity>
+<!--Main Activity-->
+<activity
     android:name=".library.screens.MainActivity"
     android:configChanges="orientation|screenSize"
     android:exported="true"
