feat(ar-lens): combine main fragment with magnigying glass activity

--- a/samples/ar-model-viewer/src/main/AndroidManifest.xml
+++ b/samples/ar-model-viewer/src/main/AndroidManifest.xml
@@ -72,14 +72,15 @@
 
 </activity>
 
-<!--Main Activity-->
+<!--Magnifying Activity
 <activity
     android:name=".library.screens.MagnifyingActivity"
     android:configChanges="orientation|screenSize"
     android:exported="true"
     android:screenOrientation="locked">
 
-</activity>
+</activity> -->
+
 <!--Main Activity-->
 <activity
     android:name=".library.screens.MainActivity"
